[metadata]
name = addressline
author = Reynier Garcia
author-email = foobar@example.org
license = MIT
long_description = file: README.md
url = https://github.com/reynierg/addressline
requires-python = >=3.6
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
